# BetterAssist

./: README.md
backend/: .gitignore  README.md  main.py  pyproject.toml  supabase_init.py  utils.py
backend/agent/: agent.py
backend/db/: chroma_init.py
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: sessionStore.ts
frontend/src/lib/components/: AssistForm.svelte  GenerateRoadmap.svelte  RoadmapBox.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/user/[uid]/: +page.svelte
