[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.4",
    "fastapi[standard]>=0.121.0",
    "langchain==0.3.27",
    "langchain-openai>=0.3.35",
    "python-dotenv>=1.2.1",
    "supabase>=2.23.3",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]